--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "hive",
+  "name": "bunery",
   "version": "1.0.0",
-  "description": "A lightweight fullstack desktop framework with Bun + Webview",
+  "description": "🥐 Bake your desktop apps with Bun + Webview",
   "type": "module",
-  "author": "Your Name",
+  "author": "Edgar Metzler",
   "license": "MIT",
-  "keywords": ["bun", "webview", "desktop", "fullstack", "tauri-alternative", "electron-alternative"],
+  "keywords": ["bun", "webview", "desktop", "bunery", "bake", "tauri-alternative", "electron-alternative"],
   "scripts": {
     "dev": "bun run scripts/dev.ts",
+    "bake": "bun run scripts/build.ts",
+    "bake:all": "bun run scripts/build-all.ts",
+    "bake:frontend": "bun run scripts/build-frontend.ts",
+    "clean": "rm -rf dist src/embedded-html.ts",
     "build": "bun run scripts/build.ts",
-    "build:all": "bun run scripts/build-all.ts",
-    "build:frontend": "bun run scripts/build-frontend.ts",
-    "clean": "rm -rf dist src/embedded-html.ts"
+    "build:all": "bun run scripts/build-all.ts"
   },
   "dependencies": {
     "webview-bun": "^2.4.0"
