🚀 READY FOR NPM: Cleanup + Package Optimization
✅ NPM Package Prep:
- Added .npmignore for clean npm publish
- Optimized package.json with proper metadata
- Added bin entries: bunery, bake
- Added files whitelist
- Added repository, homepage, bugs URLs
- Enhanced keywords for discoverability
- Set engines: bun >=1.0.0

🗑️ Cleanup:
- Deleted: .github-readme-optimization.md (internal notes)
- Deleted: scripts/post-build-windows.ts (obsolete, integrated in build.ts)
- No duplicate code found (src/backend is just wrapper)
- All docs are relevant (CODESIGNING, WINDOWS_ICON, BINDINGS, GETTING_STARTED)

📦 Package Structure:
- Essential files only via files[] whitelist
- CLI accessible as: bunery / bake
- Main entry: cli.ts
- Clean npm package ready to publish

🎯 Result:
- Lean package (~50KB without node_modules)
- No build artifacts in npm
- Only source + docs + assets
- Ready for: npm publish

--- a/package.json
+++ b/package.json
@@ -3,9 +3,55 @@
   "version": "1.0.0",
   "description": "🥐 Bake your desktop apps with Bun + Webview",
   "type": "module",
+  "main": "./cli.ts",
+  "bin": {
+    "bunery": "./cli.ts",
+    "bake": "./cli.ts"
+  },
+  "files": [
+    "cli.ts",
+    "scripts/**/*.ts",
+    "lib/**/*.ts",
+    "src/**/*.ts",
+    "src/**/*.html",
+    "src/**/*.css",
+    "assets/**/*",
+    "bunery.config.ts",
+    "entitlements.plist",
+    "README.md",
+    "LICENSE",
+    "BINDINGS.md",
+    "GETTING_STARTED.md"
+  ],
   "author": "Edgar Metzler",
   "license": "MIT",
-  "keywords": ["bun", "webview", "desktop", "bunery", "bake", "tauri-alternative", "electron-alternative"],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eddime/bunery.git"
+  },
+  "homepage": "https://github.com/eddime/bunery#readme",
+  "bugs": {
+    "url": "https://github.com/eddime/bunery/issues"
+  },
+  "keywords": [
+    "bun",
+    "webview",
+    "desktop",
+    "desktop-app",
+    "cross-platform",
+    "bunery",
+    "bake",
+    "tauri-alternative",
+    "electron-alternative",
+    "lightweight",
+    "native",
+    "macos",
+    "windows",
+    "linux"
+  ],
+  "engines": {
+    "bun": ">=1.0.0"
+  },
   "scripts": {
     "start": "bun run scripts/dev.ts",
     "dev": "bun run scripts/dev.ts",
