✨ Refactor: Separate Base64 data into embedded-libs-data.ts
- Move large Base64 strings from embedded-native.ts to separate file
- Reduces embedded-native.ts from 199k tokens to 166 lines
- Add embedded-libs-data.ts to .gitignore (auto-generated)
- Fix WEBVIEW_PATH setting in all code paths
- Update embed script to generate separate data file

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ hive-*
 
 # Generated files
 src/embedded-html.ts
+lib/embedded-libs-data.ts  # Large Base64-encoded native libraries
 
 # IDE
 .vscode/
